[package]
name = "iroh-persist"
description = "Library to persist Iroh node-ids"
version = "0.1.0"
edition = "2024"
authors = ["Jeroen van Maanen"]
readme = "README.md"
homepage = "https://github.com/node2own/iroh-persist"
repository = "https://github.com/node2own/iroh-persist"
license = "MIT"

[dependencies]
dirs = "6.0.0"
iroh = { version = "0.94", default-features = false }
n0-snafu = "0.2.2"
rand = "0.9.2"
snafu = "0.8.6"
ssh-key = { version = "0.7.0-rc.3", features = ["ed25519"] }
tokio = { version = "1.34.0", features = ["fs"] }
tracing = "0.1.40"
